# gtao-friends-cleaner

./: README.md  pyproject.toml
gtao_friends_cleaner/: __main__.py  constants.py  functions.py
