[tool.poetry]
name = "gtao_friends_cleaner"
version = "1.0.0"
description = "A script to remove friends who haven't played GTA Online for a long time."
authors = ["Anton <gmt@freemail.ru>"]
readme = "README.md"
repository = "https://github.com/antlu/gtao-friends-cleaner"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
browser_cookie3 = "^0.7.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = "^19.3b0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
